{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 51,
  "lineage": "6acdd9d2-078c-e60f-fdfc-14c7cd02f5b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fc70e28f0855719",
            "arn": "arn:aws:ec2:us-east-1:252967154155:elastic-ip/eipalloc-09fc70e28f0855719",
            "association_id": "eipassoc-03a11b750e87f4ecb",
            "domain": "vpc",
            "id": "eipalloc-09fc70e28f0855719",
            "network_border_group": "us-east-1",
            "network_interface": "eni-054d4a1282df9daf5",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-3-83-195-206.compute-1.amazonaws.com",
            "public_ip": "3.83.195.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ha-webapp-nat-eip"
            },
            "tags_all": {
              "Name": "ha-webapp-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:internet-gateway/igw-071bf71efb37d50f9",
            "id": "igw-071bf71efb37d50f9",
            "owner_id": "252967154155",
            "tags": {
              "Name": "ha-webapp-igw"
            },
            "tags_all": {
              "Name": "ha-webapp-igw"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:252967154155:loadbalancer/app/ha-webapp-alb/69473d0b6afdc8ce",
            "arn_suffix": "app/ha-webapp-alb/69473d0b6afdc8ce",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ha-webapp-alb-1398107914.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:252967154155:loadbalancer/app/ha-webapp-alb/69473d0b6afdc8ce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ha-webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-003db127a69a30147"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0611b93c8cb71c17f"
              },
              {
                "subnet_id": "subnet-0bdd456e9f01651cc"
              },
              {
                "subnet_id": "subnet-0d1b731d245bbfc14"
              }
            ],
            "subnets": [
              "subnet-0611b93c8cb71c17f",
              "subnet-0bdd456e9f01651cc",
              "subnet-0d1b731d245bbfc14"
            ],
            "tags": {
              "Name": "ha-webapp-alb"
            },
            "tags_all": {
              "Name": "ha-webapp-alb"
            },
            "vpc_id": "vpc-0d121208e3f74f41e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:252967154155:listener/app/ha-webapp-alb/69473d0b6afdc8ce/3ef1a865484ed83a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:252967154155:targetgroup/ha-webapp-tg2/63cb320e17dfec85",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:252967154155:listener/app/ha-webapp-alb/69473d0b6afdc8ce/3ef1a865484ed83a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:252967154155:loadbalancer/app/ha-webapp-alb/69473d0b6afdc8ce",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:252967154155:targetgroup/ha-webapp-tg2/63cb320e17dfec85",
            "arn_suffix": "targetgroup/ha-webapp-tg2/63cb320e17dfec85",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:252967154155:targetgroup/ha-webapp-tg2/63cb320e17dfec85",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ha-webapp-tg2",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ha-webapp-tg2"
            },
            "tags_all": {
              "Name": "ha-webapp-tg2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "df24cea7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:252967154155:targetgroup/ha-webapp-tg/9f8cf3d07aef1034",
            "arn_suffix": "targetgroup/ha-webapp-tg/9f8cf3d07aef1034",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:252967154155:targetgroup/ha-webapp-tg/9f8cf3d07aef1034",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:252967154155:loadbalancer/app/ha-webapp-alb/69473d0b6afdc8ce"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ha-webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ha-webapp-tg"
            },
            "tags_all": {
              "Name": "ha-webapp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fc70e28f0855719",
            "association_id": "eipassoc-03a11b750e87f4ecb",
            "connectivity_type": "public",
            "id": "nat-051eed9888169fd02",
            "network_interface_id": "eni-054d4a1282df9daf5",
            "private_ip": "10.0.1.88",
            "public_ip": "3.83.195.206",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1b731d245bbfc14",
            "tags": {
              "Name": "ha-webapp-nat"
            },
            "tags_all": {
              "Name": "ha-webapp-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:route-table/rtb-0d1fbbcb972884e62",
            "id": "rtb-0d1fbbcb972884e62",
            "owner_id": "252967154155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051eed9888169fd02",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-webapp-private-rt"
            },
            "tags_all": {
              "Name": "ha-webapp-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:route-table/rtb-0caf0a9aa8f5c3931",
            "id": "rtb-0caf0a9aa8f5c3931",
            "owner_id": "252967154155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071bf71efb37d50f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-webapp-public-rt"
            },
            "tags_all": {
              "Name": "ha-webapp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023d4224d2af11e11",
            "route_table_id": "rtb-0d1fbbcb972884e62",
            "subnet_id": "subnet-0551c35723b45e85e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b72621ee3b5440b3",
            "route_table_id": "rtb-0d1fbbcb972884e62",
            "subnet_id": "subnet-0d598fb52bea7c745"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081ef369c704fa039",
            "route_table_id": "rtb-0d1fbbcb972884e62",
            "subnet_id": "subnet-07e926db611c7dc73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094b66d66fae1f13c",
            "route_table_id": "rtb-0caf0a9aa8f5c3931",
            "subnet_id": "subnet-0d1b731d245bbfc14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae878a1737e1eb11",
            "route_table_id": "rtb-0caf0a9aa8f5c3931",
            "subnet_id": "subnet-0bdd456e9f01651cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d3ee2e92bd27d44",
            "route_table_id": "rtb-0caf0a9aa8f5c3931",
            "subnet_id": "subnet-0611b93c8cb71c17f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:security-group/sg-003db127a69a30147",
            "description": "Allow HTTP traffic to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003db127a69a30147",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ha-webapp-alb-sg",
            "name_prefix": "",
            "owner_id": "252967154155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-webapp-alb-sg"
            },
            "tags_all": {
              "Name": "ha-webapp-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:security-group/sg-0da07640a30e4bc6f",
            "description": "Allow traffic only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da07640a30e4bc6f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB only",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003db127a69a30147"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ha-webapp-ec2-sg",
            "name_prefix": "",
            "owner_id": "252967154155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-webapp-ec2-sg"
            },
            "tags_all": {
              "Name": "ha-webapp-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:security-group/sg-0e7fc98f29ab27544",
            "description": "Allow DB traffic only from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7fc98f29ab27544",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from EC2 only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da07640a30e4bc6f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ha-webapp-rds-sg",
            "name_prefix": "",
            "owner_id": "252967154155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-webapp-rds-sg"
            },
            "tags_all": {
              "Name": "ha-webapp-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:subnet/subnet-0551c35723b45e85e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0551c35723b45e85e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252967154155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-webapp-private-1"
            },
            "tags_all": {
              "Name": "ha-webapp-private-1"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:subnet/subnet-0d598fb52bea7c745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d598fb52bea7c745",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252967154155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-webapp-private-2"
            },
            "tags_all": {
              "Name": "ha-webapp-private-2"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:subnet/subnet-07e926db611c7dc73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e926db611c7dc73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252967154155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-webapp-private-3"
            },
            "tags_all": {
              "Name": "ha-webapp-private-3"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:subnet/subnet-0d1b731d245bbfc14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b731d245bbfc14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252967154155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-webapp-public-1"
            },
            "tags_all": {
              "Name": "ha-webapp-public-1"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:subnet/subnet-0bdd456e9f01651cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdd456e9f01651cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252967154155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-webapp-public-2"
            },
            "tags_all": {
              "Name": "ha-webapp-public-2"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:subnet/subnet-0611b93c8cb71c17f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0611b93c8cb71c17f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252967154155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-webapp-public-3"
            },
            "tags_all": {
              "Name": "ha-webapp-public-3"
            },
            "vpc_id": "vpc-0d121208e3f74f41e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252967154155:vpc/vpc-0d121208e3f74f41e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0625ef5f5e8eeedb7",
            "default_route_table_id": "rtb-031857744dccda6c6",
            "default_security_group_id": "sg-0a820853f644d73cc",
            "dhcp_options_id": "dopt-0b9def4d62527fd30",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d121208e3f74f41e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031857744dccda6c6",
            "owner_id": "252967154155",
            "tags": {
              "Name": "ha-webapp-vpc"
            },
            "tags_all": {
              "Name": "ha-webapp-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}